# Habits

./: .env.example  .gitignore  README.md  pyproject.toml
config/: settings.py  urls.py
habits/: models.py  pagination.py  permissions.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_initial.py  0003_alter_habit_pleasant_habit.py  0004_alter_habit_reward.py
telegram/: models.py
telegram/migrations/: 0001_initial.py  0002_telegram_is_active.py  0003_alter_telegram_options.py
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: create_superusers.py
users/migrations/: 0001_initial.py  0002_user_telegram.py
